--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,10 +6,13 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.TOKEN }}
     steps:
-      - run: git clone https://github.com/univdev/recommends
-      - run: ls -f
-      - run: cd recommends
-      - run: ls -f
-      - run: touch example.txt
-      - run: git commit -m "feat 테스트 파일 추가"
-      - run: git push origin master
+      - uses: actions/checkout@master
+        with:
+          name: 'univdev/recommends'
+      # - run: git clone https://github.com/univdev/recommends
+      # - run: ls -f
+      # - run: cd recommends
+      # - run: ls -f
+      # - run: touch example.txt
+      # - run: git commit -m "feat 테스트 파일 추가"
+      # - run: git push origin master
