chore: 깃 추가 구문 적용

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,6 +17,8 @@ jobs:
       - name: git 정보 설정
         working-directory: ./recommends
         run: git config --global user.email "you@example.com" && git config --global user.name "Your Name"
+      - name: 파일을 깃에 추가
+        run: git add *
       - name: 커밋 추가
         working-directory: ./recommends
         run: git commit -m "text.txt 파일 추가"
