--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,6 +18,7 @@ jobs:
         working-directory: ./recommends
         run: git config --global user.email "you@example.com" && git config --global user.name "Your Name"
       - name: 파일을 깃에 추가
+        working-directory: ./recommends
         run: git add *
       - name: 커밋 추가
         working-directory: ./recommends
